pinentry (0.9.6-1) unstable; urgency=medium

  * New upstream release
  * fix pinentry-tty description typo (Closes: #798944)
    Thanks, Yuri D'Elia

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Fri, 11 Sep 2015 17:14:45 -0400

pinentry (0.9.5-4) unstable; urgency=medium

  * use -std=gnu++11 for pinentry-qt4 (Closes: #795175)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 11 Aug 2015 13:03:19 -0400

pinentry (0.9.5-3) unstable; urgency=medium

  * added dependency from pinentry-gnome3 to gcr (Closes: #791379)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Wed, 05 Aug 2015 00:39:02 -0400

pinentry (0.9.5-2) unstable; urgency=medium

  * disable emacs and emacs-fallback until we get a better description of
    them in the upstream documentation

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 07 Jul 2015 14:43:33 -0400

pinentry (0.9.5-1) unstable; urgency=medium

  * new upstream release
  * build-depends on libgpg-error and libassuan now

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Thu, 02 Jul 2015 18:01:23 -0400

pinentry (0.9.4-2) unstable; urgency=medium

  * rely on user's choice of password-manager with pinentry-gnome3

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Tue, 09 Jun 2015 07:12:16 -0400

pinentry (0.9.4-1) unstable; urgency=medium

  * New upstream version (most d/patches applied upstream)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Fri, 05 Jun 2015 17:33:37 -0400

pinentry (0.9.3-3) unstable; urgency=medium

  * fix secmem buffer over-clearing (Closes: #787690)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Thu, 04 Jun 2015 23:48:26 -0400

pinentry (0.9.3-2) unstable; urgency=medium

  * fix pinentry-curses text entry (Closes: #787639)

 -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Wed, 03 Jun 2015 13:25:16 -0400

pinentry (0.9.3-1) unstable; urgency=medium

  * New upstream release.
  * Help pinentry-qt4 show up above existing windows (Closes: #581617)
  * add new pinentry-gnome3 package.
