@@ -1,0 +1,1 @@
+debian/pinentry-qt.1
