@@ -1,0 +1,10 @@
+#! /bin/sh
+
+set -e
+
+if [ "$1" = remove ]; then
+	update-alternatives --quiet --remove pinentry-x11 /usr/bin/pinentry-qt
+	update-alternatives --quiet --remove pinentry /usr/bin/pinentry-qt
+fi
+
+#DEBHELPER#
