@@ -1,0 +1,2 @@
+usr/bin/pinentry-qt /usr/bin/pinentry-qt4
+usr/share/man/man1/pinentry-qt.1.gz /usr/share/man/man1/pinentry-qt4.1.gz
