@@ -1,1 +1,0 @@
-debian/pinentry-qt4.1
