@@ -1,14 +1,0 @@
-#! /bin/sh
-
-set -e
-
-if [ "$1" = configure ]; then
-	update-alternatives --quiet \
-	  --install /usr/bin/pinentry pinentry /usr/bin/pinentry-qt4 95 \
-	  --slave /usr/share/man/man1/pinentry.1.gz pinentry.1.gz /usr/share/man/man1/pinentry-qt4.1.gz
-	update-alternatives --quiet \
-	  --install /usr/bin/pinentry-x11 pinentry-x11 /usr/bin/pinentry-qt4 95 \
-	  --slave /usr/share/man/man1/pinentry-x11.1.gz pinentry-x11.1.gz /usr/share/man/man1/pinentry-qt4.1.gz
-fi
-
-#DEBHELPER#
