@@ -1,10 +1,0 @@
-#! /bin/sh
-
-set -e
-
-if [ "$1" = remove ]; then
-	update-alternatives --quiet --remove pinentry-x11 /usr/bin/pinentry-qt4
-	update-alternatives --quiet --remove pinentry /usr/bin/pinentry-qt4
-fi
-
-#DEBHELPER#
