@@ -3,8 +3,11 @@ pinentry (0.9.6-1) unstable; urgency=medium
   * New upstream release
   * fix pinentry-tty description typo (Closes: #798944)
     Thanks, Yuri D'Elia
+  * introduce new pinentry-qt, which people should use instead of
+    pinentry-qt4.
+  * pinentry-qt4 is now a dummy transitional package.
 
- -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Fri, 11 Sep 2015 17:14:45 -0400
+ -- Daniel Kahn Gillmor <dkg@fifthhorseman.net>  Thu, 01 Oct 2015 19:04:24 -0700
 
 pinentry (0.9.5-4) unstable; urgency=medium
 
